syntax = "proto3";

package msg;

import "config.proto";

message ArrayDataBaseConfig
{
	repeated DataBaseConfig data = 1;
}